kubernetes/apps/adventurelog/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adventurelog-postgres
  namespace: adventurelog
spec:
  serviceName: adventurelog-postgres
  replicas: 1
  selector:
    matchLabels:
      app: adventurelog-postgres
  template:
    metadata:
      labels:
        app: adventurelog-postgres
    spec:
      securityContext:
        runAsUser: 977
        runAsGroup: 988
        fsGroup: 988
      containers:
        - name: postgres
          image: postgis/postgis:16-3.4
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adventurelog-postgres-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: adventurelog-postgres
  namespace: adventurelog
spec:
  selector:
    app: adventurelog-postgres
  ports:
    - port: 5432
